Get a working XML parser, fix some bugs